fixed ui alignment

--- a/frontend/src/components/Chat.module.css
+++ b/frontend/src/components/Chat.module.css
@@ -1,243 +1,237 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    height: 90vh;
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 90vh;
 }
-.header{
-    height: 8vh;
-    display: flex;
-    align-items: "center";
-    min-height: 70px;
-    border-bottom: 1px solid black;
-    position: relative;
-}
-
-.menubtn{
-    position: relative;
-    right: 10px;
-    font-size: 30px;
+.header {
+  height: 8vh;
+  display: flex;
+  align-items: "center";
+  min-height: 70px;
+  border-bottom: 1px solid black;
+  position: relative;
 }
 
-.chatOptndiv{
-    background-color: #4c91c7;
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-    align-items: center;
-    padding: 20px 5%;
-    z-index: 99;
+.menubtn {
+  position: relative;
+  right: 10px;
+  font-size: 30px;
 }
 
-.chatOptndiv button{
-    display: flex;
-    height: 8vh;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 5px 20px;
-    border-radius: 10px;
-}
-.chatOptndiv button:hover{
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-.chatOptndiv .icon{
-    font-size: 20px;
+.chatOptndiv {
+  background-color: #4c91c7;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px 5%;
+  z-index: 99;
+  color: white;
 }
 
-
-.user{
-    padding: 10px 5%;
-    display: flex;
-    width: 100%;
-    align-items: "center";
+.chatOptndiv button {
+  display: flex;
+  height: 8vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 2px 20px;
+  border-radius: 10px;
 }
-.user img{
-    width: 2.5rem;
-    height: 2.5rem;
-    margin: auto 0;
-    border-radius: 50%;
-    margin-right: 20px;
-    object-fit: cover;
+.chatOptndiv button:hover {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-
-.info{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+.chatOptndiv .icon {
+  margin-bottom: 2px;
 }
 
-.info h2{
-    font-size: 18px;
-    font-weight: bold;
+.user {
+  padding: 10px 5%;
+  display: flex;
+  width: 100%;
+  align-items: "center";
 }
-.info p{
-    color: gray;
-}
-
-.chat{
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    overflow-y: auto;
-    overflow-x: hidden;
-    flex: 1;
-    padding: 10px;
-    scrollbar-width: thin;
+.user img {
+  width: 2.5rem;
+  height: 2.5rem;
+  margin: auto 0;
+  border-radius: 50%;
+  margin-right: 20px;
+  object-fit: cover;
 }
 
-.left{
-    align-self: flex-start;
-    background-color: #727272;
-    color: #fff;
-    padding: 5px 20px;
-    margin: 2px;
-    margin-left: 10px;
-    border-radius: 10px;
-    border-top-left-radius: 0;
-    display: flex;
-    flex-direction: column;
-    max-width: 80%;
-    position: relative;
-}
-.right{
-    align-self: flex-end;
-    background-color: #4c91c7;
-    color: #fff;
-    padding: 5px 20px;
-    margin: 2px;
-    margin-right: 10px;
-    border-radius: 10px;
-    border-top-right-radius: 0;
-    display: flex;
-    flex-direction: column;
-    max-width: 90%;
-    overflow-wrap: break-word;
-    position: relative;
-}
-.right .time{
-    display: flex;
-    font-size: smaller;
-    align-self: flex-end;
-    margin: 2px;
-}
-.left .time{
-    opacity: 0.5;
-    font-size: smaller;
-    align-self: flex-start;
-    margin: 2px;
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
-
-.left .seen{
-    display: none;
+.info h2 {
+  font-size: 18px;
+  font-weight: bold;
+}
+.info p {
+  color: gray;
 }
 
-.right .time .seen{
-    font-size: larger;
-    opacity: 1;
-    color: white;
-    margin-left: 12px;
+.chat {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow-y: auto;
+  overflow-x: hidden;
+  flex: 1;
+  padding: 10px;
+  scrollbar-width: thin;
 }
 
-
-.right .msgebtn{
-    position: absolute;
-    right: 2px;
-    font-size: 17px;
+.left {
+  align-self: flex-start;
+  background-color: #727272;
+  color: #fff;
+  padding: 5px 20px;
+  margin: 4px 2px;
+  margin-left: 10px;
+  border-radius: 10px;
+  border-top-left-radius: 0;
+  display: flex;
+  flex-direction: column;
+  max-width: 80%;
+  position: relative;
+}
+.right {
+  align-self: flex-end;
+  background-color: #4c91c7;
+  color: #fff;
+  padding: 5px 20px;
+  margin: 4px 2px;
+  margin-right: 10px;
+  border-radius: 10px;
+  border-top-right-radius: 0;
+  display: flex;
+  flex-direction: column;
+  max-width: 90%;
+  overflow-wrap: break-word;
+  position: relative;
+}
+.right .time {
+  display: flex;
+  font-size: smaller;
+  align-self: flex-end;
+  margin: 2px;
+}
+.left .time {
+  opacity: 0.5;
+  font-size: smaller;
+  align-self: flex-start;
+  margin: 2px;
 }
 
-
-.left .msgebtn{
-    display: none;
+.left .seen {
+  display: none;
 }
 
-.msgOptndiv{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 5px;
+.right .time .seen {
+  font-size: larger;
+  opacity: 1;
+  color: white;
+  margin-left: 12px;
 }
 
-.msgOptndiv button{
-    font-size: 20px;
+.right .msgebtn {
+  position: absolute;
+  right: 2px;
+  font-size: 17px;
 }
 
-
-.sendDiv{
-    width: 100%;
-    position: relative;
-    padding-bottom: 10px;
+.left .msgebtn {
+  display: none;
 }
 
+.msgOptndiv {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 5px;
+}
 
+.msgOptndiv button {
+  font-size: 20px;
+}
 
-.txtInput{
+.sendDiv {
+  width: 100%;
+  position: relative;
+  padding-bottom: 10px;
+}
+
+.txtInput {
+  width: 95%;
+  border: 1px solid var(--borderColor);
+  border-radius: 20px;
+  padding: 1vh 9%;
+  min-height: 8vh;
+  max-height: 17vh;
+  margin-left: 3%;
+  resize: none;
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+.imgBtn {
+  position: absolute;
+  left: 6%;
+  bottom: 49px;
+  transform: translateY(75%);
+  z-index: 99;
+  font-size: 25px;
+}
+
+.submitBtn {
+  font-size: 30px;
+  position: absolute;
+  right: 4%;
+  bottom: 40px;
+  transform: translateY(40%);
+}
+
+.imgPrevContainer {
+  margin: 10px 0;
+  margin-left: 6%;
+}
+.imgPrevDiv img {
+  width: 70px;
+  aspect-ratio: 1;
+  object-fit: cover;
+}
+.imgPrevDiv {
+  display: flex;
+  position: relative;
+}
+
+.imgPrevDiv button {
+  position: absolute;
+  top: -5px;
+  left: 70px;
+  transform: translateX(-50%);
+  background-color: #4c91c7;
+  border-radius: 50%;
+  width: 25px;
+  aspect-ratio: 1;
+  color: white;
+  font-weight: bolder;
+}
+
+.hide {
+  display: none;
+}
+
+.chat img {
+  width: 10rem;
+}
+
+@media (max-width: 1200px) {
+  .txtInput {
     width: 95%;
-    border: 1px solid var(--borderColor);
-    border-radius: 20px;
-    padding: 1vh 9%;
-    min-height: 8vh;
-    max-height: 17vh;
-    margin-left: 3%;
-    resize: none;
-    overflow-y: auto;
-    scrollbar-width: none;
-}
-.imgBtn{
-    position: absolute;
-    left: 6%;
-    bottom: 49px;
-    transform: translateY(75%);
-    z-index: 99;
-    font-size: 25px;
-}
-
-.submitBtn{
-    font-size: 30px;
-    position: absolute;
-    right: 4%;
-    bottom: 40px;
-    transform: translateY(40%);
-}
-
-.imgPrevContainer{
-    margin: 10px 0;
-    margin-left: 6%;
-}
-.imgPrevDiv img{
-    width: 70px;
-    aspect-ratio: 1;
-    object-fit: cover;
-}
-.imgPrevDiv{ 
-    display: flex;
-    position: relative;
-}
-
-.imgPrevDiv button{
-    position: absolute;
-    top: -5px;
-    left: 70px;
-    transform: translateX(-50%);
-    background-color: #4c91c7;
-    border-radius: 50%;
-    width: 25px;
-    aspect-ratio: 1;
-    color: white;
-    font-weight: bolder;
-}
-
-.hide{
-    display: none;
-}
-
-.chat img{
-    width:10rem;
-}
-
-@media (max-width:1200px) {
-    .txtInput{
-        width: 95%;
-    }
+  }
 }
