--- a/frontend/src/components/PhoneChat.module.css
+++ b/frontend/src/components/PhoneChat.module.css
@@ -26,7 +26,7 @@
     position: absolute;
     right: 0;
     top: 10vh;
-    height: 12vh;
+    height: 10vh;
     z-index: 100;
     background-color: var(--mainColor);
     min-height: 10vh;
@@ -34,7 +34,6 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 20px 5%;
     pointer-events: auto;
 }
 
@@ -43,15 +42,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 10px 20px;
+    padding: 5px 20px;
     border-radius: 10px;
 }
 .chatOptndiv button:hover{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .chatOptndiv .icon{
-    font-size: 20px;
-    margin-bottom: 5px;
+    margin-bottom: 2px;
 }
 
 .user{
@@ -98,7 +96,7 @@
     background-color: #727272;
     color: #fff;
     padding: 5px 20px;
-    margin: 2px;
+    margin: 5px 2px;
     margin-left: 10px;
     border-radius: 10px;
     border-top-left-radius: 0;
@@ -112,9 +110,9 @@
     align-self: flex-end;
     background-color: #4c91c7;
     color: #fff;
-    padding: 2px 10px;
+    padding: 2px 20px;
     padding-top: 7px;
-    margin: 2px;
+    margin: 5px 2px;
     border-radius: 10px;
     border-top-right-radius: 0;
     display: flex;
